==> c1728p9/mbed/features/USBDevice/targets/TARGET_NUVOTON/TARGET_M451/USBHAL_M453.cpp <==
#include "USBHAL.h"
#include "M451Series.h"
#include "pinmap.h"

void USBHAL::remoteWakeup(void)
{
#if 0
    USBD->OPER |= USBD_OPER_RESUMEEN_Msk;
#endif
}

bool USBHAL::realiseEndpoint(uint8_t endpoint, uint32_t maxPacket, uint32_t options)
{
    uint32_t ep_type = 0;
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    uint32_t ep_logic_index = NU_EP2EPL(endpoint);
    uint32_t ep_dir = (NU_EP_DIR(endpoint) == NU_EP_DIR_IN) ? USBD_CFG_EPMODE_IN : USBD_CFG_EPMODE_OUT;

    if (ep_logic_index == 3 || ep_logic_index == 4)
        ep_type = USBD_CFG_TYPE_ISO;

    USBD_CONFIG_EP(ep_hw_index, ep_dir | ep_type | ep_logic_index);
    /* Buffer range */
    USBD_SET_EP_BUF_ADDR(ep_hw_index, s_ep_buf_ind);

    if (ep_dir == USBD_CFG_EPMODE_OUT)
        USBD_SET_PAYLOAD_LEN(ep_hw_index, maxPacket);

    s_ep_mxp[ep_logic_index] = maxPacket;

    s_ep_buf_ind += maxPacket;

    return true;
}

void USBHAL::EP0write(uint8_t *buffer, uint32_t size)
{
    if (buffer && size)
    {
        if (s_ep_data_bit[0] & 1)
            USBD_SET_DATA1(EP0);
        else
            USBD_SET_DATA0(EP0);
        s_ep_data_bit[0]++;

        USBD_MemCopy((uint8_t *)USBD_BUF_BASE + USBD_GET_EP_BUF_ADDR(EP0), buffer, size);
        USBD_SET_PAYLOAD_LEN(EP0, size);
        if (size < MAX_PACKET_SIZE_EP0)
            s_ep_data_bit[0] = 1;

    }
    else
    {
        if (g_usbd_SetupPacket[0] & 0x80)   //Device to Host
        {
            // Status stage
            //          USBD_PrepareCtrlOut(0,0);
        } else
        {
            USBD_SET_DATA1(EP0);
            USBD_SET_PAYLOAD_LEN(EP0, 0);
        }
    }
}

EP_STATUS USBHAL::endpointWrite(uint8_t endpoint, uint8_t *data, uint32_t size)
{
    uint32_t ep_logic_index = NU_EP2EPL(endpoint);
    if (ep_logic_index == 0)
        return EP_INVALID;
    else
    {
        uint8_t *buf;
        uint32_t i=0;
        uint32_t ep_hw_index = NU_EP2EPH(endpoint);
        s_ep_compl |= (1 << ep_logic_index);
        buf = (uint8_t *)(USBD_BUF_BASE + USBD_GET_EP_BUF_ADDR(ep_hw_index));
        for (i=0;i<size;i++)
            buf[i] = data[i];

        /* Set transfer length and trigger IN transfer */
        USBD_SET_PAYLOAD_LEN(ep_hw_index, size);

    }
    return EP_PENDING;
}

void USBHAL::stallEndpoint(uint8_t endpoint)
{
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    if (ep_hw_index >= NUMBER_OF_PHYSICAL_ENDPOINTS)
        return;

    USBD_SetStall(NU_EPH2EPL(ep_hw_index));

}

void USBHAL::unstallEndpoint(uint8_t endpoint)
{
    uint32_t ep_hw_index = NU_EP2EPH(endpoint);
    if (ep_hw_index >= NUMBER_OF_PHYSICAL_ENDPOINTS)
        return;
    USBD_ClearStall(NU_EPH2EPL(ep_hw_index));
}

void USBHAL::_usbisr(void)
{
    MBED_ASSERT(instance);
    instance->usbisr();
}

void USBHAL::usbisr(void)
{
    uint32_t u32IntSts = USBD_GET_INT_FLAG();
    uint32_t u32State = USBD_GET_BUS_STATE();

//------------------------------------------------------------------
    if (u32IntSts & USBD_INTSTS_VBDETIF_Msk)
    {
        // Floating detect
        USBD_CLR_INT_FLAG(USBD_INTSTS_VBDETIF_Msk);

        if (USBD_IS_ATTACHED())
        {
            /* USB Plug In */
            USBD_ENABLE_USB();
        }
        else
        {
            /* USB Un-plug */
            USBD_DISABLE_USB();
        }
    }

//------------------------------------------------------------------
    if (u32IntSts & USBD_INTSTS_BUSIF_Msk)
    {
        /* Clear event flag */
        USBD_CLR_INT_FLAG(USBD_INTSTS_BUSIF_Msk);

        if (u32State & USBD_ATTR_USBRST_Msk)
        {
            /* Bus reset */
            USBD_ENABLE_USB();
            USBD_SwReset();
        }
        if (u32State & USBD_ATTR_SUSPEND_Msk)
        {
            /* Enable USB but disable PHY */
            USBD_DISABLE_PHY();
        }
        if (u32State & USBD_ATTR_RESUME_Msk)
        {
            /* Enable USB and enable PHY */
            USBD_ENABLE_USB();
        }
    }

    if (u32IntSts & USBD_INTSTS_USBIF_Msk)
    {
        // USB event
        if (u32IntSts & USBD_INTSTS_SETUP_Msk)
        {
            // Setup packet
            /* Clear event flag */
            USBD_CLR_INT_FLAG(USBD_INTSTS_SETUP_Msk);

            /* Clear the data IN/OUT ready flag of control end-points */
            USBD_STOP_TRANSACTION(EP0);
            USBD_STOP_TRANSACTION(EP1);
            EP0setupCallback();
        }

        // EP events
        if (u32IntSts & USBD_INTSTS_EP0)
        {
            /* Clear event flag */
            USBD_CLR_INT_FLAG(USBD_INTSTS_EP0);
            // control IN
            EP0in();

            // In ACK for Set address
            if ((g_usbd_SetupPacket[0] == REQ_STANDARD) && (g_usbd_SetupPacket[1] == USBD_SET_ADDRESS))
            {
                if ((USBD_GET_ADDR() != s_usb_addr) && (USBD_GET_ADDR() == 0))
                {
                    USBD_SET_ADDR(s_usb_addr);
                }
            }
        }
        if (u32IntSts & USBD_INTSTS_EP1)
        {
            /* Clear event flag */
            USBD_CLR_INT_FLAG(USBD_INTSTS_EP1);

            // control OUT
            EP0out();
        }

        uint32_t gintsts_epx = (u32IntSts >> 18) & 0x3F;
        uint32_t ep_hw_index = 2;
        while (gintsts_epx) {
            if (gintsts_epx & 0x01)
            {
                uint32_t ep_status = (USBD_GET_EP_FLAG() >> (ep_hw_index * 3 + 8)) & 0x7;
                /* Clear event flag */
                USBD_CLR_INT_FLAG(1 << (ep_hw_index + 16));

                if (ep_status == 0x02 || ep_status == 0x06 || (ep_status == 0x07 && NU_EPH2EPL(ep_hw_index) == 3))  //RX
                {
                    if (ep_status == 0x07)
                        SOF(frame_cnt++);
                    if ((instance->*(epCallback[ep_hw_index-2]))())
                    {

                    }
                    USBD_SET_PAYLOAD_LEN(ep_hw_index,s_ep_mxp[NU_EPH2EPL(ep_hw_index)]);
                }
                else if (ep_status == 0x00 || ep_status == 0x07)    //TX
                {
                    s_ep_compl &= ~(1 << (NU_EPH2EPL(ep_hw_index)));
                    if ((instance->*(epCallback[ep_hw_index-2]))())
                    {
                    }
                }
            }

            gintsts_epx = gintsts_epx >> 1;
            ep_hw_index++;
        }
    }
}
